# selenium-tech-task

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  makefile  pyproject.toml  requirements.txt  supervisord.conf
app/: __init__.py  celery_config.py  db.py  main.py  tasks.py  utils.py
tests/: conftest.py  test_db.py  test_main.py  test_tasks.py  test_utils.py
