[tool.poetry]
name = "selenium-tech-task"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.23.1"
pytest = "^8.3.2"
celery = "^5.4.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.31"
webdriver-manager = "^4.0.2"
redis = "^5.0.8"
pytest-celery = "^1.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
